[tool.poetry]
name = "gaming-progression"
version = "0.1.0"
description = ""
authors = ["Mikhail Panin <mokybrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^23.12.1"
ruff = "^0.1.14"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pre-commit = "^3.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest-dotenv = "^0.5.2"
types-passlib = "^1.7.7.20240106"


[tool.pytest.ini_options]
pythonpath = [
  ".", "gaming_progression_api",
]
env_files = [".test.env"]
asyncio_mode="auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.mypy_cache
| \.pytest_cache
| \.venv
| \.vscode
| \.idea
)
'''

[tool.mypy]
python_version = 3.12
plugins = [
"pydantic.mypy"
]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
exclude = [
'prometheus_data\.py',
'.venv/',
'venv/',
'migrations.*',
'gaming_progression_api/services/users.py',
'gaming_progression_api/integrations/repository.py',
'gaming_progression_api/services/unitofwork.py',
'gaming_progression_api/services/auth.py:28',
'gaming_progression_api/services/auth.py'
]

[tool.isort]
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 1

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
".venv",
]
select = [
"F", # Pyflakes
"E", # pycodestyle
"C90", # mccabe
# "I", # isort
# "N", # pep8-naming
# "D", # pydocstyle
"UP", # pyupgrade
"YTT", # flake8-2020
# "ANN", # flake8-annotations
# "S", # flake8-bandit
# "BLE", # flake8-blind-except
# "FBT", # flake8-boolean-trap
"B", # flake8-bugbear
# "A", # flake8-builtins
"COM", # flake8-commas
# "C4", # flake8-comprehensions
# "DTZ", # flake8-datetimez
"T10", # flake8-debugger
# "EM", # flake8-errmsg
"EXE", # flake8-executable
"ISC", # flake8-implicit-str-concat
# "ICN", # flake8-import-conventions
"G", # flake8-logging-format
"INP", # flake8-no-pep420
# "PIE", # flake8-pie
"T20", # flake8-print
# "PT", # flake8-pytest-style
# "Q", # flake8-quotes
# "RET", # flake8-return
# "SIM", # flake8-simplify
"TID", # flake8-tidy-imports
# "TCH", # flake8-type-checking
# "ARG", # flake8-unused-arguments
"PTH", # flake8-use-pathlib
"ERA", # eradicate
# "PD", # pandas-vet
# "PGH", # pygrep-hooks
# "PL", # Pylint
# "TRY", # tryceratops
"RSE", # flake8-raise
"SLF", # flake8-self
"RUF", # Ruff-specific rules
]

[tool.ruff.mccabe]
max-complexity = 20
