[tool.poetry]
name = "mbrwco"
version = "0.1.0"
description = "Сайт для отслеживания и обсуждения игрового опыта"
authors = ["Mikhail Panin <mokybrow@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
mypy = "^1.10.1"
isort = "^5.13.2"
black = "^24.4.2"
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
pre-commit = "^3.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
markdownify = "^0.12.1"
boto3 = "^1.34.139"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
fastapi-mail = "^1.4.1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_between_types = 1

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.mypy_cache
| \.pytest_cache
| \.venv
| \.vscode
| \.idea
)
'''